# partner-api-smaple

./: .env.example  .gitignore  Cargo.toml  README.md
src/: api_query.rs  browser_screenshot.rs  main.rs  shopify_partner_api.rs
