[package]
name = "app-screenshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
csv = "1.2.0"
dotenv = "0.15.0"
envy = "0.4.2"
gql_client = "1.0.7"
headless_chrome = "1.0.5"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
